// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonCircle /> snapshot should match snapshot 1`] = `
<div>
  <mdc-button
    class="md-button-circle-wrapper"
    color="default"
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="primary"
  />
</div>
`;

exports[`<ButtonCircle /> snapshot should match snapshot when a ghost 1`] = `
<div>
  <mdc-button
    class="md-button-circle-wrapper"
    color="default"
    data-btn-type="pill"
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="tertiary"
  >
    X
  </mdc-button>
</div>
`;

exports[`<ButtonCircle /> snapshot should match snapshot when color is outlined 1`] = `
<div>
  <mdc-button
    class="md-button-circle-wrapper"
    color="default"
    data-btn-type="pill"
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="secondary"
  >
    X
  </mdc-button>
</div>
`;

exports[`<ButtonCircle /> snapshot should match snapshot when color is outlined and inverted is set 1`] = `
<div>
  <mdc-button
    class="md-button-circle-wrapper"
    color="default"
    inverted=""
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="secondary"
  />
</div>
`;

exports[`<ButtonCircle /> snapshot should match snapshot when disabled 1`] = `
<div>
  <mdc-button
    aria-disabled="true"
    class="md-button-circle-wrapper"
    color="default"
    data-btn-type="pill"
    disabled=""
    internals-disabled=""
    role="button"
    size="40"
    tabindex="-1"
    type="button"
    variant="primary"
  >
    X
  </mdc-button>
</div>
`;

exports[`<ButtonCircle /> snapshot should match snapshot when prefixIcon is set 1`] = `
<div>
  <mdc-button
    class="md-button-circle-wrapper"
    color="default"
    data-btn-type="icon"
    prefix-icon="placeholder-regular"
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="primary"
  />
</div>
`;

exports[`<ButtonCircle /> snapshot should match snapshot when shallow disabled 1`] = `
<div>
  <mdc-button
    aria-disabled="true"
    class="md-button-circle-wrapper"
    color="default"
    data-btn-type="pill"
    role="button"
    size="40"
    soft-disabled=""
    tabindex="0"
    type="button"
    variant="primary"
  >
    X
  </mdc-button>
</div>
`;

exports[`<ButtonCircle /> snapshot should match snapshot when variant is set 1`] = `
<div>
  <mdc-button
    class="md-button-circle-wrapper"
    color="default"
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="secondary"
  />
</div>
`;

exports[`<ButtonCircle /> snapshot should match snapshot with className 1`] = `
<div>
  <mdc-button
    class="md-button-circle-wrapper example-class"
    color="default"
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="primary"
  />
</div>
`;

exports[`<ButtonCircle /> snapshot should match snapshot with color 1`] = `
<div>
  <mdc-button
    class="md-button-circle-wrapper"
    color="positive"
    data-btn-type="pill"
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="primary"
  >
    X
  </mdc-button>
</div>
`;

exports[`<ButtonCircle /> snapshot should match snapshot with id 1`] = `
<div>
  <mdc-button
    class="md-button-circle-wrapper"
    color="default"
    id="example-id"
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="primary"
  />
</div>
`;

exports[`<ButtonCircle /> snapshot should match snapshot with multiple children 1`] = `
<div>
  <mdc-button
    class="md-button-circle-wrapper"
    color="default"
    data-btn-type="pill"
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="primary"
  >
    <div>
      X
    </div>
    <div>
      Y
    </div>
  </mdc-button>
</div>
`;

exports[`<ButtonCircle /> snapshot should match snapshot with size 1`] = `
<div>
  <mdc-button
    class="md-button-circle-wrapper"
    color="default"
    data-btn-type="pill"
    role="button"
    size="32"
    tabindex="0"
    type="button"
    variant="primary"
  >
    X
  </mdc-button>
</div>
`;

exports[`<ButtonCircle /> snapshot should match snapshot with style 1`] = `
<div>
  <mdc-button
    class="md-button-circle-wrapper"
    color="default"
    role="button"
    size="40"
    style="color: pink;"
    tabindex="0"
    type="button"
    variant="primary"
  />
</div>
`;

exports[`<ButtonCircle /> snapshot should match snapshot with title 1`] = `
<div>
  <mdc-button
    class="md-button-circle-wrapper"
    color="default"
    role="button"
    size="40"
    tabindex="0"
    title="Example Text"
    type="button"
    variant="primary"
  />
</div>
`;
